--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,8 @@
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
       <li><a class="dropdown-item" href="/profile/">Profile</a></li>
       <li><a class="dropdown-item" href="#">Settings</a></li>
+      <li><a class="dropdown-item" href="#">Login</a></li>
+      <li><a class="dropdown-item" href="#">Singup</a></li>
       <li><hr class="dropdown-divider"></li>
       <li><a class="dropdown-item" href="#">Logout</a></li>
     </ul>
