--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
       <li><a class="dropdown-item" href="/profile/">Profile</a></li>
       <li><a class="dropdown-item" href="#">Settings</a></li>
       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Login</a></li>
-      <li><a class="dropdown-item" href="#">Singup</a></li>
+      <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#singup_form" href="#">Register</a></li>
       <li><hr class="dropdown-divider"></li>
       <li><a class="dropdown-item" href="#">Logout</a></li>
     </ul>
@@ -79,14 +79,15 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-       <form action="">
+       <form action="{% url 'login' %}" method="post">
+        {% csrf_token %}
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">username</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="username">
+          <input name="username" type="text" class="form-control" id="exampleFormControlInput1" placeholder="username">
         </div>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="password">
+          <input name="password" type="password" class="form-control" id="exampleFormControlInput1" placeholder="password">
         </div>
         <button type="submit" class="btn btn-primary w-100">login</button>
        </form>
@@ -98,6 +99,42 @@
     </div>
   </div>
 </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="singup_form" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       <form action="{% url 'register' %}" method="post">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email</label>
+          <input name="email" type="email" class="form-control" id="exampleFormControlInput1" >
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">username</label>
+          <input name="username" type="text" class="form-control" id="exampleFormControlInput1" placeholder="username">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Password</label>
+          <input name="password" type="password" class="form-control" id="exampleFormControlInput1" placeholder="password">
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Register</button>
+       </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
