--- a/templates/base.html
+++ b/templates/base.html
@@ -62,13 +62,17 @@
 </div>
 
   </nav>
-  
+  {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="alert alert-dark" role="alert" {% endif %} >{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 {% block content %}
 {% endblock content %}
  <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
+
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
