--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Login</a></li>
       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#singup_form" href="#">Register</a></li>
       <li><hr class="dropdown-divider"></li>
-      <li><a class="dropdown-item" href="#">Logout</a></li>
+      <li><a class="dropdown-item" href="/logout">Logout</a></li>
     </ul>
   </div>
 </div>
