--- a/templates/pin_page.html
+++ b/templates/pin_page.html
@@ -11,7 +11,11 @@
           <p class="card-text"><small class="text-muted">{{pin.author}}</small></p>
         </div>
         <a href="/"> <button class="btn btn-primary w-100">Go Back</button></a>
-       
+
+        {% if pin.author == user %}
+          
+        <a href="/delete-pin/{{pin.id}}"><button class="btn btn-danger w-100">Delete Pin</button></a>
+        {% endif %}
   </div>
 </div>
 {% endblock content %}
