--- a/templates/updatePin.html
+++ b/templates/updatePin.html
@@ -22,9 +22,11 @@
     
     
             <div class="mb-3">
-                <button  type="submit" class="btn btn-primary w-100">Update Pin </button>
+                <a href="/"><button   type="submit" class="btn btn-primary w-100">Update Pin </button>
+                </a>
             </div>
         </form>
     </div>
+    
 </div>
 {% endblock content %}
