--- a/templates/home.html
+++ b/templates/home.html
@@ -16,8 +16,7 @@
             {% if user in pin.savers.alls %}
             <a href="/unsave-pin/{{pin.id}}" class="btn btn-danger btn-sm position-absolute top-0 start-0 m-2">UnSave</a>
             {% else %}
-
-            <a href="/save-pin/{{pin.id}}" class="btn btn-danger btn-sm position-absolute top-0 start-0 m-2">Save</a>
+            <a href="/save-pin/{{pin.id}}" class="btn btn-primary btn-sm position-absolute top-0 start-0 m-2">Save</a>
             {% endif %}
             <div class="position-absolute bottom-0 end-0 m-2 d-flex align-items-center">
               <button class="btn btn-light btn-sm me-2 rounded-pill bg-light">
