--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
         <div class="col-md-4 mt-4">
           <div class="card" style="width: 100%; position: relative;">
             <img src="/media/{{pin.pic}}" class="card-img-top rounded" alt="Card Image" style="height: 300px; object-fit: cover;">
-            {% if user in pin.savers.alls %}
+            {% if user in pin.savers.all %}
             <a href="/unsave-pin/{{pin.id}}" class="btn btn-danger btn-sm position-absolute top-0 start-0 m-2">UnSave</a>
             {% else %}
             <a href="/save-pin/{{pin.id}}" class="btn btn-primary btn-sm position-absolute top-0 start-0 m-2">Save</a>
